; ModuleID = '/home/carl/AnghaBench/linux/drivers/fpga/extr_dfl.c_dfl_fpga_cdev_add_port_dev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/fpga/extr_dfl.c_dfl_fpga_cdev_add_port_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dfl_fpga_cdev = type { i32, i32 }
%struct.platform_device = type { i32 }
%struct.dfl_feature_platform_data = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dfl_fpga_cdev*, %struct.platform_device*)* @dfl_fpga_cdev_add_port_dev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dfl_fpga_cdev_add_port_dev(%struct.dfl_fpga_cdev* %0, %struct.platform_device* %1) #0 {
  %3 = alloca %struct.dfl_fpga_cdev*, align 8
  %4 = alloca %struct.platform_device*, align 8
  %5 = alloca %struct.dfl_feature_platform_data*, align 8
  store %struct.dfl_fpga_cdev* %0, %struct.dfl_fpga_cdev** %3, align 8
  store %struct.platform_device* %1, %struct.platform_device** %4, align 8
  %6 = load %struct.platform_device*, %struct.platform_device** %4, align 8
  %7 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %6, i32 0, i32 0
  %8 = call %struct.dfl_feature_platform_data* @dev_get_platdata(i32* %7)
  store %struct.dfl_feature_platform_data* %8, %struct.dfl_feature_platform_data** %5, align 8
  %9 = load %struct.dfl_fpga_cdev*, %struct.dfl_fpga_cdev** %3, align 8
  %10 = getelementptr inbounds %struct.dfl_fpga_cdev, %struct.dfl_fpga_cdev* %9, i32 0, i32 0
  %11 = call i32 @mutex_lock(i32* %10)
  %12 = load %struct.dfl_feature_platform_data*, %struct.dfl_feature_platform_data** %5, align 8
  %13 = getelementptr inbounds %struct.dfl_feature_platform_data, %struct.dfl_feature_platform_data* %12, i32 0, i32 1
  %14 = load %struct.dfl_fpga_cdev*, %struct.dfl_fpga_cdev** %3, align 8
  %15 = getelementptr inbounds %struct.dfl_fpga_cdev, %struct.dfl_fpga_cdev* %14, i32 0, i32 1
  %16 = call i32 @list_add(i32* %13, i32* %15)
  %17 = load %struct.dfl_feature_platform_data*, %struct.dfl_feature_platform_data** %5, align 8
  %18 = getelementptr inbounds %struct.dfl_feature_platform_data, %struct.dfl_feature_platform_data* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = call i32 @get_device(i32* %20)
  %22 = load %struct.dfl_fpga_cdev*, %struct.dfl_fpga_cdev** %3, align 8
  %23 = getelementptr inbounds %struct.dfl_fpga_cdev, %struct.dfl_fpga_cdev* %22, i32 0, i32 0
  %24 = call i32 @mutex_unlock(i32* %23)
  ret void
}

declare dso_local %struct.dfl_feature_platform_data* @dev_get_platdata(i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @list_add(i32*, i32*) #1

declare dso_local i32 @get_device(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
